syntax = "proto3";

package yandex.cloud.video.v1;

import "google/protobuf/field_mask.proto";
import "yandex/cloud/api/operation.proto";
import "yandex/cloud/operation/operation.proto";
import "yandex/cloud/video/v1/video.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/video/v1;video";
option java_package = "yandex.cloud.api.video.v1";

// Video management service.
service VideoService {
  // Returns the specific video.
  rpc Get(GetVideoRequest) returns (Video) {}

  // List videos for channel.
  rpc List(ListVideoRequest) returns (ListVideoResponse) {}

  // Create video.
  rpc Create(CreateVideoRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "CreateVideoMetadata"
      response: "Video"
    };
  }

  // Update video.
  rpc Update(UpdateVideoRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "UpdateVideoMetadata"
      response: "Video"
    };
  }

  // Delete video.
  rpc Delete(DeleteVideoRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "DeleteVideoMetadata"
      response: "google.protobuf.Empty"
    };
  }

  // Perform an action on the episode.
  rpc PerformAction(PerformVideoActionRequest) returns (operation.Operation) {
    option (yandex.cloud.api.operation) = {
      metadata: "PerformVideoActionMetadata"
      response: "Video"
    };
  }

  // Returns url to the player.
  rpc GetPlayerURL(GetVideoPlayerURLRequest) returns (GetVideoPlayerURLResponse) {}
}

message GetVideoRequest {
  // ID of the video.
  string video_id = 1;
}

message ListVideoRequest {
  reserved 2 to 99;
  // ID of the channel.
  string channel_id = 1;

  // The maximum number of the results per page to return. Default value: 100.
  int64 page_size = 100;
  // Page token for getting the next page of the result.
  string page_token = 101;

  // By which column the listing should be ordered and in which direction,
  // format is "createdAt desc". "id asc" if omitted.
  // Possible fields: ["id", "createdAt", "updatedAt"]
  // Both snake_case and camelCase are supported for fields.
  string order_by = 102;

  // Filter expression that filters resources listed in the response.
  // Expressions are composed of terms connected by logic operators.
  // Value in quotes: `'` or `"`
  // Example: "key1='value' AND key2='value'"
  // Supported operators: ["AND"].
  // Supported fields: ["title", "status", "visibility_status"]
  // Both snake_case and camelCase are supported for fields.
  string filter = 103;
}

message ListVideoResponse {
  reserved 2 to 99;
  repeated Video videos = 1;

  // Token for getting the next page.
  string next_page_token = 100;
}

message CreateVideoRequest {
  reserved 201 to 999;
  reserved 1001 to 1999;
  reserved 2001;
  reserved 5 to 199;

  // ID of the channel.
  string channel_id = 1;

  // Video title.
  string title = 2;
  // Video description.
  string description = 3;
  // ID of the thumbnail.
  string thumbnail_id = 4;

  // Custom labels as `` key:value `` pairs. Maximum 64 per resource.
  map<string, string> labels = 200;

  // Source type.
  oneof source {
    // Upload video using the tus protocol.
    VideoTUSDParams tusd = 1000;
  }

  // Video access rights.
  oneof access_rights {
    // Video is available to everyone.
    VideoPublicAccessParams public_access = 2000;
    // Checking access rights using the authorization system.
    VideoAuthSystemAccessParams auth_system_access = 2002;
  }
}

message VideoTUSDParams {
  // File size.
  int64 file_size = 1;
  // File name.
  string file_name = 2;
}

message VideoPublicAccessParams {}

message VideoAuthSystemAccessParams {}

message CreateVideoMetadata {
  // ID of the video.
  string video_id = 1;
}

message UpdateVideoRequest {
  reserved 201 to 1999;
  reserved 2001;
  reserved 6 to 199;

  // ID of the video.
  string video_id = 1;
  // Field mask that specifies which fields of the video are going to be updated.
  google.protobuf.FieldMask field_mask = 2;

  // Video title.
  string title = 3;
  // Video description.
  string description = 4;
  // ID of the thumbnail.
  string thumbnail_id = 5;
  // Custom labels as `` key:value `` pairs. Maximum 64 per resource.
  map<string, string> labels = 200;

  oneof access_rights {
    VideoPublicAccessParams public_access = 2000;
    VideoAuthSystemAccessParams auth_system_access = 2002;
  }
}

message UpdateVideoMetadata {
  // ID of the video.
  string video_id = 1;
}

message DeleteVideoRequest {
  // ID of the video.
  string video_id = 1;
}

message DeleteVideoMetadata {
  // ID of the video.
  string video_id = 1;
}

message PerformVideoActionRequest {
  // ID of the video.
  string video_id = 1;
  reserved 2 to 999;
  oneof action {
    PublishVideoAction publish = 1000;
    UnpublishVideoAction unpublish = 1001;
  }
}

message PublishVideoAction {}

message UnpublishVideoAction {}

message PerformVideoActionMetadata {
  // ID of the video.
  string video_id = 1;
}

message GetVideoPlayerURLRequest {
  // ID of the video.
  string video_id = 1;
  VideoPlayerParams params = 2;
}

message VideoPlayerParams {
  // If true, a player will be muted by default.
  bool mute = 1;
  // If true, playback will start automatically.
  bool autoplay = 2;
  // If true, a player interface will be hidden by default.
  bool hidden = 3;
}

message GetVideoPlayerURLResponse {
  // Direct link to the video.
  string player_url = 1;
  // HTML embed code in Iframe format.
  string html = 2;
}
